# candata

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: freshness-check.yml
docs/: agents.md  product-overview.md
monitoring/: freshness_check.py  freshness_report.json
scripts/: deploy.sh  dev.sh  setup.sh
shared/python/: pyproject.toml
shared/python/src/candata_shared/: __init__.py  config.py  constants.py  db.py  geo.py  time_utils.py
shared/python/src/candata_shared/models/: __init__.py  entities.py  geography.py  housing.py  indicators.py  procurement.py  trade.py
shared/typescript/: README.md  package-lock.json  package.json  tsconfig.json
shared/typescript/src/: constants.ts  index.ts
shared/typescript/src/types/: api.ts  entities.ts  geography.ts  housing.ts  indicators.ts  procurement.ts  reports.ts  trade.ts
supabase/: kong.yml
supabase/migrations/: 001_extensions.sql  002_geography.sql  003_entities.sql  004_indicators.sql  005_housing.sql  006_procurement.sql  007_trade.sql  008_users_billing.sql  009_pipeline_metadata.sql  010_cmhc_housing.sql  011_trade_hs6.sql  012_comtrade_flows.sql  013_housing_enrichment.sql  014_saved_reports.sql
supabase/seed/: cmas.sql  indicators.sql  provinces.sql
