[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candata-shared"
version = "0.1.0"
description = "Shared models, utilities, and configuration for the candata platform"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "supabase>=2.0",
    "duckdb>=0.10",
    "polars>=0.20",
    "httpx>=0.27",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/candata_shared"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
